Update for 1.21